# esp-lib

./: CLAUDE.md  CMakeLists.txt  README.md  library.json  package.json  platformio.ini
docs/: AGENTS.md  CLAUDE.md
examples/basic/: main.cpp
include/: Association.h  ControllerRequestDTO.h  FlightController.h  JoystickModel.h  PairingPacket.h  PingRequestDTO.h  TelemetryDTO.h
src/: CMakeLists.txt  ControllerRequestDTO.cpp  FlightController.cpp  JoystickModel.cpp  main.cpp
